cargo-features = ["strip"]

[package]
name = "aws-s3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = {version = "0.26.3", default-features = false, features = ["rustls-tls"]}
clap = "2.33"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 'z'
lto = true
strip = true
